--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,5 @@
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="button">Button</string>
 </resources>
