--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,4 +155,5 @@
     <string name="due_date">Due date: 17-12-30</string>
     <string name="due_time">Due time: 22:55</string>
     <string name="confirm">Confirm</string>
+    <string name="add_new_task">Add new task</string>
 </resources>
