--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -34,4 +34,5 @@
     <string name="password">密码</string>
     <string name="email">邮箱</string>
     <string name="hint">提示</string>
+    <string name="showTask">显示我的任务</string>
 </resources>
