--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -37,4 +37,6 @@
     <string name="showTask">显示我的任务</string>
     <string name="log_out">登出</string>
     <string name="all_user">所有用户</string>
+    <string name="delete">删除</string>
+    <string name="send_message">发信息</string>
 </resources>
