--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -39,4 +39,6 @@
     <string name="all_user">所有用户</string>
     <string name="delete">删除</string>
     <string name="send_message">发信息</string>
+    <string name="shopping">购物清单</string>
+    <string name="tasks">任务</string>
 </resources>
