--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -41,4 +41,9 @@
     <string name="send_message">发信息</string>
     <string name="shopping">购物清单</string>
     <string name="tasks">任务</string>
+    <string name="states">状态</string>
+    <string name="task_name">任务名称：</string>
+    <string name="point">分数：</string>
+    <string name="date">日期：</string>
+    <string name="time">时间：</string>
 </resources>
