--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -29,7 +29,6 @@
     <string name="cupboard_and_fridge">橱柜及冰箱</string>
     <string name="broom_clost_tools">壁橱（工具）</string>
     <string name="location">超市位置</string>
-    <string name="setting">设置</string>
     <string name="project_name">牛逼的项目</string>
     <string name="password">密码</string>
     <string name="email">邮箱</string>
@@ -46,4 +45,7 @@
     <string name="point">分数：</string>
     <string name="date">日期：</string>
     <string name="time">时间：</string>
+    <string name="item_name">物品名称</string>
+    <string name="groceries">杂货</string>
+    <string name="metarial">材料</string>
 </resources>
