--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -51,4 +51,7 @@
     <string name="user_name">用户名</string>
     <string name="about_us">关于我们</string>
     <string name="all_user">所有用户</string>
+    <string name="successful_delete">删除成功</string>
+    <string name="fail_delete">您不是任务创建者，无法删除</string>
+    <string name="deleted_chore">此任务已被删除。</string>
 </resources>
