--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,4 +170,8 @@
     <string name="successful_delete">Successful delete</string>
     <string name="fail_delete">Cannot delete the chore because you are not the creator</string>
     <string name="deleted_chore">This chore has already been deleted.</string>
+    <string name="finish">Finish</string>
+    <string name="successful_complete">Successful complete</string>
+    <string name="fail_complete">You are not the worker of this chore so you cannot complete it.</string>
+    <string name="already_complete">This chore has already been submit.</string>
 </resources>
