--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -59,4 +59,12 @@
     <string name="fail_complete">您不是任务的工作者，无法提交完成申请。</string>
     <string name="already_complete">此任务已经成功提交完成申请。</string>
     <string name="signUser">分配工作者</string>
+    <string name="quick_search">快速查找</string>
+    <string name="error_incorrect_password">输入的密码不正确</string>
+    <string name="error_invalid_password">输入的密码过短</string>
+    <string name="error_invalid_email">邮箱格式不正确</string>
+    <string name="error_field_required">此部分内容是必填的</string>
+    <string name="register">注册</string>
+    <string name="sign_in">登陆</string>
+    <string name="my_information">个人信息</string>
 </resources>
