--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,7 +97,6 @@
     </string>
 
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="calender">TODO</string>
     <string name="time">Time:</string>
     <string name="date">Date:</string>
@@ -115,18 +114,14 @@
     <string name="current_tasks">Current Tasks</string>
     <string name="send_message">Send Message</string>
     <string name="kobe_bryant">Kobe Bryant</string>
-    <string name="register_bt">REGISTER</string>
+    <string name="register">REGISTER</string>
     <string name="hint">hint</string>
     <string name="email">Email</string>
     <string name="password">password</string>
-    <string name="name">Register</string>
-    <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
@@ -164,7 +159,7 @@
     <string name="material">Material</string>
     <string name="creator">Creator</string>
     <string name="worker">Worker</string>
-    <string name="user_name">UserName</string>
+    <string name="user_name">User Name</string>
     <string name="about_us">About us</string>
     <string name="all_user">All user</string>
     <string name="successful_delete">Successful delete</string>
@@ -175,4 +170,7 @@
     <string name="fail_complete">You are not the worker of this chore so you cannot complete it.</string>
     <string name="already_complete">This chore has already been submit.</string>
     <string name="signUser">Sign a worker</string>
+    <string name="quick_search">Quick Search</string>
+    <string name="sign_in">SIGN IN</string>
+    <string name="my_information">My Information</string>
 </resources>
