--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">家务管理系统</string>
+    <string name="app_name">牛逼家务管理系统</string>
     <string name="action_settings">设置</string>
     <string name="walmart">沃尔玛</string>
     <string name="bestbuy">百思买</string>
